# Mission-Oriented-Agentic-AI-with-Last-Mile-Verification

./: .coverage  Makefile  README.md  nl_to_sql_agent.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  langchain_agent_example.py  langchain_runnable.py  langchain_tool.py
api/: __init__.py  main.py  schemas.py
api/middleware/: __init__.py  auth.py  telemetry.py
api/routes/: __init__.py  health.py  query.py
docs/: PROJECT_101.md  architecture.md  design-decisions.md  quickstart.md
docs/api/: openapi.yaml
infra/docker/: Dockerfile  alertmanager.yml  docker-compose.yml  prometheus.yml
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/docker/grafana/provisioning/datasources/: datasources.yml
infra/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
mlops/: __init__.py  tracking.py
mlops/data/: sample_queries.json
mlops/eval/: __init__.py  benchmark.py
observability/: __init__.py  logging_config.py  metrics.py  tracing.py
security/: __init__.py  audit_export.py  auth.py  pii_detector.py
src/nl_to_sql/: __init__.py  agent.py  models.py
src/nl_to_sql/llm/: __init__.py  base.py  mock.py
src/nl_to_sql/rag/: __init__.py  rag_enhanced.py  schema_retriever.py
src/nl_to_sql/verifiers/: __init__.py  base.py  safety.py  schema.py  semantic.py  syntax.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_verifiers.py
